Do not pass TTI to browser if FMP was invalidated

If First Meaningful Paint is invalidated on the renderer side, we should
not pass a TTI value to the browser. If we do, we end up with a
PageLoadTiming struct that contains a TTI value but no FMP value, and we
throw away that struct as invalid.

We still log a trace event (following the convention of FMP), because
the reaching of TTI quiescence can be useful data for post processing.

Bug: 808536
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I66869d0691bfc934fb94f427f6566f6a70463a73
Reviewed-on: https://chromium-review.googlesource.com/899506
Reviewed-by: Nate Chapin <japhet@chromium.org>
Reviewed-by: Bryan McQuade <bmcquade@chromium.org>
Commit-Queue: Deepanjan Roy <dproy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#535413}
Former-commit-id: 2576d2ee65549577c3293fa1f657586845e895ff